infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bun-elysia-paseto-api
  namespace: default
  labels:
    app: bun-elysia-paseto-api
    tier: backend
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: bun-elysia-paseto-api
